--- a/static/src/js/components/Facets/FacetsItem.scss
+++ b/static/src/js/components/Facets/FacetsItem.scss
@@ -52,6 +52,8 @@
     display: flex;
     align-items: center;
     flex: 1;
+    min-width: 0;
+    overflow: hidden;
   }
 
   &__title {
@@ -59,6 +61,8 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    min-width: 0;
+    max-width: 100%;
     color: utils.$color__carbon--90;
     font-weight: 400;
     font-size: 0.875rem;
